Refactor index.html for button styling and cleanup
Updated button classes for styling and removed unnecessary HTML structure.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    <meta charset="UTF-8">
-    <title>Play the Life!</title>
-    <link rel="stylesheet" href="./style.css">
-
-  </head>
-    
-  <body>
-  <div class="hero-profile">
+<div class="hero-profile">
      
   <div class="hero-header">
     <div class="name-level">
@@ -37,10 +26,5 @@
 
 </div>
 
-<button id="add-xp-button">Ganhar 10 xp!</button>
-<button id="remove-xp-button">Tirar 10 xp!🥀💔</button>
-    <script  src="./script.js"></script>
-
-  </body>
-  
-</html>
+<button class="add-xp-button animated-btn">Ganhar 10 xp!</button>
+<button class="remove-xp-button animated-btn">Tirar 10 xp!🥀💔</button>
