Wrap buttons in a new div for better structure

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 
 </div>
 
-<button class="add-xp-button animated-btn">Ganhar 10 xp!</button>
-<button class="remove-xp-button animated-btn">Tirar 10 xp!🥀💔</button>
-    <script  src="./script.js"></script>
+<div class="buttons-xp">
+  <button class="add-xp-button animated-btn">Ganhar 10 xp!</button>
+  <button class="remove-xp-button animated-btn">Tirar 10 xp!🥀💔</button>
+</div>
 
   </body>
   
