--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      
   <div class="hero-header">
     <div class="name-level">
-      <h1 class="hero-name">Seu nome de Herói</h1>
+      <h1 class="hero-name">Seu nome</h1>
       <span class="hero-level-text">- Nível</span>
       <span id="hero-level">1</span>
     </div>
