--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<main id="hero-page" class="page">
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8">
+    <title>Play the Life!</title>
+    <link rel="stylesheet" href="./style.css">
+
+  </head>
+    
+  <body>
+  <main id="hero-page" class="page">
      <div class="hero-profile">
 
     <div class="hero-header">
@@ -56,3 +67,8 @@
   <button id="nav-hero-button">Herói</button>
   <button id="nav-tasks-button">Missões</button>
 </nav>
+    <script  src="./script.js"></script>
+
+  </body>
+  
+</html>
